# django

./: .env.example  .gitignore  README.md  docker-compose.database.yml  docker-compose.server.yml  pyproject.toml  requests.py  requests_.py  requirements.txt
.github/workflows/: python-package.yml
deploy/python/: Dockerfile
django_rest_api/: db.sqlite3
examples/: task_example.json  user_example.json
src/: config.py  deletethis.py  manage.py
src/adminpage/: asgi.py  loader.py  settings.py  swager.py  urls.py  wsgi.py
src/ai_api/: admin.py  apps.py  models.py  serializers.py  tag_system.py  urls.py  utils.py  views.py  word2vector.py
src/ai_api/migrations/: 0002_auto_20210706_0041.py  0003_auto_20210706_0050.py
src/ai_api/utils/: KeywordExtractor.py  __init__.py  tag_system.py  utils.py  word2vector.py
src/api/: urls.py  views.py
src/api/migrations/: 0001_initial.py  0002_alter_employee_phone_number.py  0002_auto_20210828_0744.py  0002_auto_20210829_0725.py  0002_task_name.py  0003_alter_action_keywords_vectorized.py  0003_alter_department_description.py  0003_alter_employee_phone_number.py  0003_auto_20210829_0530.py  0003_task_employee.py  0004_auto_20210829_1151.py
src/api/models/: Action.py  Department.py  Employee.py  Leader.py  Task.py  User.py  __init__.py  enums.py  managers.py
src/api/serializers/: ActionSerializer.py  DepartmentSerializer.py  EmployeeSerializer.py  TaskSerializer.py  __init__.py  auth.py  user.py
src/api/views/: ActionView.py  DepartmentView.py  EmployeeView.py  TaskView.py  __init__.py  auth.py  user.py
src/django_rest_api/: settings.py
