[tool.poetry]
name = "djangoapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
djangorestframework = "^3.12.4"
psycopg2 = "^2.9.1"
requests = "^2.26.0"
python-dotenv = "^0.19.0"
django-phonenumber-field = "^5.2.0"
phonenumbers = "^8.12.31"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
