[tool.poetry]
name = "djangoapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
djangorestframework = "^3.12.4"
django-postgres-extensions = "^0.9.3"
requests = "^2.26.0"
python-dotenv = "^0.19.0"
django-phonenumber-field = "^5.2.0"
tensorflow = "^2.6.0"
phonenumbers = "^8.12.31"
ufal.udpipe = "^1.2.0.3"
pymorphy2 = "^0.9.1"
gensim = "^4.0.1"
python-Levenshtein = "^0.12.2"
nltk = "^3.2.5"
scikit-learn = "^0.22.2.post1"
sentence-transformers = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
